--- a/CityExperWeb/Web.config
+++ b/CityExperWeb/Web.config
@@ -17,6 +17,7 @@
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
+    <customErrors mode="Off"/>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -50,4 +51,5 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-<connectionStrings><add name="CityExperDb2Entities" connectionString="metadata=res://*/Entity.Model1.csdl|res://*/Entity.Model1.ssdl|res://*/Entity.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=CityExperDb2;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
+<connectionStrings><add name="CityExperDb2Entities" connectionString="metadata=res://*/Entity.Model1.csdl|res://*/Entity.Model1.ssdl|res://*/Entity.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=94.73.145.9;Initial Catalog=u8854804_CityExp; User Id=u8854804_kerim;Password=110101014KKkk.;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
+<!--<connectionStrings><add name="CityExperDb2Entities" connectionString="metadata=res://*/Entity.Model1.csdl|res://*/Entity.Model1.ssdl|res://*/Entity.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=CityExperDb2;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>-->
